--- a/index.html
+++ b/index.html
@@ -1,23 +1,14 @@
-<!DOCTYPE html>
+,<!DOCTYPE html>
 <html>
   <head>
     <title>Universe</title>
-    <script src = "javascript.js"></script>
+    <script src="javascript.js"></script>
     <link rel="icon" type="image/png" href="icon.png">
     <link rel="stylesheet" type="text/css" href="stylesheet.css" />
   </head>
-  <body class = "body" id = "body">
-    <div class = "options" id = "options">
-      <button class="OptionsButton" id = "OptionsButton">Options</button>
-      <div class="OptionsContent" id = "OptionsContent">
-        <button class = "ThemeButton" onclick = "ChangeTheme()" id = "ThemeButton" href = "#">Theme</button>
-      </div>
-      <div class = "Title" id = "Title">
-        Universe
-      </div>
-      <div class = "Debug" id = "Debug">
-        Debug
-      </div>
+  <body class = "Body" id = "Body">
+    <div class = "Title" id = "Title">
+      Universe
     </div>
   </body>
 </html>
