--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
     <div class = "Title" id = "Title">
       Universe
     </div>
+    <div class = "InfoArea" id = "InfoArea">
+      <span class = "Info" id = "Info">
+        You are a quark in an infinite universe
+      </span>
+    </div>
+    <div class = "DuplicateDiv" id = "DuplicateDiv">
+      <button class = "DuplicateButton" id = "DuplicateButton" onclick = "Replicate()">
+      Replicate
+      </button>
+    </div>
   </body>
 </html>
