--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-,<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>Universe</title>
@@ -19,6 +19,14 @@
       <button class = "DuplicateButton" id = "DuplicateButton" onclick = "Replicate()">
       Replicate
       </button>
+    </div>
+    <div class = "ResourceViewer" id = "ResourceViewer">
+      <div class = "QuarkCount" id = "QuarkCount">
+        Quarks:
+        <span class = "Quarks" id = "Quarks">
+          0
+        </span>
+      </div>
     </div>
   </body>
 </html>
