--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
           0
         </span>
       </div>
+      <div class = "GluonCount" id = "GluonCount">
+        Gluons:
+        <span class = "Gluons" id = "Gluons">
+          0
+        </span>
+      </div>
+      <div class = "NeutronCount" id = "NeutronCount">
+        Neutrons:
+        <span class = "Neutrons" id = "Neutrons">
+          0
+        </span>
+      </div>
+      <div class = "ProtonCount" id = "ProtonCount">
+        Protons:
+        <span class = "Protons" id = "Protons">
+          0
+        </span>
+      </div>
+    </div>
+    <div class = "SaveDiv" id = "SaveDiv">
+      <button class = "SaveButton" id = "SaveButton" onclick = "Save()">
+        Save
+      </button>
     </div>
   </body>
 </html>
