--- a/index.html
+++ b/index.html
@@ -74,13 +74,23 @@
       </button>
     </div>
     <div class = "ElectronDiv" id = "ElectronDiv">
-      <button class = "ElectronButton" id = "ElectronButton" onclick = "GenElectron" aria-label = "Generate an Electron">
+      <button class = "ElectronButton" id = "ElectronButton" onclick = "GenElectron()" aria-label = "Generate an Electron">
         Generate Electron
       </button>
     </div>      
     <div class = "HydrogenDiv" id = "HydrogenDiv">
       <button class = "HydrogenButton" id = "HydrogenButton" onclick = "FuseHydrogen()" aria-label = "Fuse 1 Proton, 1 Electron, and 1 Neutron into Hydrogen">
         Fuse Hydrogen
+      </button>
+    </div>
+    <div class = "ReplicatorDiv" id = "ReplicatorDiv">
+      <button class = "ReplicatorButton" id = "ReplicatorButton" onclick = "BuyReplicator()" aria-label = "Purchase a Replicator to automatically replicate for you">
+        Buy Replicator
+      </button>
+    </div>
+    <div class = "GeneratorDiv" id = "GeneratorDiv">
+      <button class = "GeneratorButton" id = "GeneratorButton" onclick = "BuyGenerator()" aria-label = "Purchase a Generator to automatically generate electrons">
+        Buy Generator
       </button>
     </div>
   </body>
